src/deps/misc/cerr_redirector.h

typedef void (*cerr_callback)(const char* text, void* user_data);